--- a/Oef_Project_Destiny/Project_Destiny_WPF/App.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Project_Destiny_WPF"
-             StartupUri="MainWindow.xaml">
+             StartupUri="UserControls/Locations.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <FontFamily x:Key="font">Segoe UI</FontFamily>
