--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Locations.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/Locations.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Project_Destiny_WPF.UserControls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="550" d:DesignWidth="800">
+             d:DesignHeight="550" d:DesignWidth="800" Loaded="UserControl_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -40,19 +40,19 @@
 
             </DataGrid.Resources>
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Width="215"/>
-                <DataGridTextColumn Header="Restricted area" Width="215"/>
+                <DataGridTextColumn Header="Name" Width="215" Binding="{Binding Naam}"/>
+                <DataGridTextColumn Header="Restricted area" Width="215" Binding="{Binding RestrictedArea}"/>
             </DataGrid.Columns>
         </DataGrid>
 
         <StackPanel Orientation="Horizontal" Grid.ColumnSpan="3" Grid.Row="3" HorizontalAlignment="Center" Margin="0,10,0,10">
             <TextBox x:Name="txtLocations" materialDesign:HintAssist.Hint="Locatie" Width="205" Margin="0,0,10,0" />
-            <TextBox x:Name="txtArea" materialDesign:HintAssist.Hint="Area" Width="205" Margin="10,0,0,0"/>
+            <TextBox x:Name="txtArea" Text="False" materialDesign:HintAssist.Hint="Area" Width="205" Margin="10,0,0,0"/>
         </StackPanel>
 
-        <Button x:Name="BtnWijzig" Content="Wijzig" Grid.Column="0" Grid.Row="4" Margin="10,10,10,20"/>
-        <Button x:Name="BtnToeevogen" Content="Voeg toe" Grid.Column="1" Grid.Row="4" Margin="10,10,10,20"/>
-        <Button x:Name="BtnVerwijderen" Content="Verwijderen" Grid.Column="2" Grid.Row="4" Margin="10,10,10,20"/>
+        <Button x:Name="BtnWijzig" Content="Wijzig" Grid.Column="0" Grid.Row="4" Margin="10,10,10,20" Click="BtnWijzig_Click"/>
+        <Button x:Name="BtnToeevogen" Content="Voeg toe" Grid.Column="1" Grid.Row="4" Margin="10,10,10,20" Click="BtnToeevogen_Click"/>
+        <Button x:Name="BtnVerwijderen" Content="Verwijderen" Grid.Column="2" Grid.Row="4" Margin="10,10,10,20" Click="BtnVerwijderen_Click"/>
 
 
 
